<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">Temperature Converter</string>
    <string name="temp_hint_text">Enter Temperature</string>
    <string name="celsius_button_title">Celsius</string>
    <string name="fahrenheit_button_title">Fahrenheit</string>
    <string name="displayResult">Result:</string>
</resources>
