<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.carolynhemmings.temperatureconverter.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#3b83e9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#fff"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/temp_hint_text"
        android:textColor="#fff"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:textColorHint="#fff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius_button_title"
        android:id="@+id/celsiusButtonId"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit_button_title"
        android:id="@+id/fButtonId"
        android:layout_alignTop="@+id/celsiusButtonId"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView2"
        android:textColor="#fff"
        android:layout_below="@+id/celsiusButtonId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/displayResult"
        android:textColor="#fff"
        android:id="@+id/displayResult"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/celsiusButtonId"
        android:layout_alignEnd="@+id/celsiusButtonId" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/displayResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />
</RelativeLayout>
